# otus-c-2023-01-denis-salamatin

./: README.md
hw-03/: Makefile  is-rarjpeg.c
hw-04/: Makefile  decode.c
hw-08/: Makefile  input1.txt  open-hash-table.c
hw-09/: Makefile  curl-weather.c  wttr-in-chain.pem
hw-12/: README.md  meson.build  otuslog.c  otuslog.h  test.c
hw-16/1/clib/clib/src/common/: clib-package-patch1.c  patch_diff1.txt
hw-16/1/clib/clib/test/package/: package-install.c  patch_diff.txt
hw-16/2/clib/src/common/: clib-package.c  clib-package.c.old  diff_clib-package.txt
hw-19/: README.md  client.c  config.ini  daemon-filesize.c  meson.build
hw20/: Makefile  README.md  crc32.c
